# ADK

./: .gitignore  README.md  adk_launch.py  pyproject.toml  requirements.txt
autodrivekit/: __init__.py  __main__.py  _cli_impl.py  _paths.py  adk_rich_help.py  archive_hash.py  bootstrap.py  cli.py  config_migrate.py  doctor.py  feishu_auth.py  feishu_drive.py  interactive_ui.py  platform_info.py  registry.py  tool_runtime_paths.py  updater.py  user_layout.py
autodrivekit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ADK平台使用手册.md  ADK平台说明.md  cfg-word使用手册.md  property使用手册.md  vhal-svc使用手册.md
scripts/: pack_adk_release.sh  publish_release_feishu.py  sync_docs_to_feishu.py  sync_version_history_feishu.py  wiki_release_upload.py
tools/tool_cfg_word/: PLAN.md  README.md  adk-tool.json  config.json  main.py  name_mapping.json
tools/tool_cfg_word/lib/: codegen.py  config_validate.py  deploy.py  feishu_api.py  feishu_config.py  feishu_sync.py  gap_fill.py  name_mapping.py  property_sync.py  version_detect.py
tools/tool_cfg_word/vehicleConfigGen++/: README.md  config.json  vehicleConfigGen++.py
tools/tool_property/: README.md  adk-tool.json  config.json  main.py  requirements.txt
tools/tool_property/lib/: codegen.py  excelop.py  term_color.py  utils.py
tools/tool_property/model/: property_model.py
tools/tool_vhal_svc/: README.md  adk-tool.json  config.json  main.py
tools/tool_vhal_svc/lib/: feishu_fetch.py
tools/tool_vhal_svc/vehicle_generate/: VENDOR.txt  vehicle_generate_tool_QA.py
(+138 files in other folders)
