[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodrivekit"
version = "1.2.10"
description = "AutoDriveKit（ADK）— 统一工具平台；单一 CLI 入口 adk，聚合车辆工具链（property / cfg-word / vhal-svc 等）"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openpyxl",
    "jinja2",
    "requests",
]

[project.optional-dependencies]
dev = []

[project.scripts]
adk = "autodrivekit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autodrivekit*"]
